Update 1. Introduction to ZWE QLFS.md

--- a/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction to ZWE QLFS.md
+++ b/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction to ZWE QLFS.md
@@ -8,38 +8,37 @@
 
 ## What is the ZWE QLFS survey?
 
-The Zimbabwe National Statistics Agency (ZIMSTAT) started conducting Quarterly Labour Force Surveys (QLFS’s) conducted in the 3rd quarter of 2021 to ensure timely reporting of labour statistics.
+The Zimbabwe National Statistics Agency (ZIMSTAT) started conducting Quarterly Labour Force Surveys (QLFS) in the 3rd quarter of 2021 to ensure timely reporting of labour statistics.
 
 ## What does the ZWE QLFS survey cover?
 
-This QLFS is the first one to be conducted the ZWE statistics bureau. It followa the 2013 labour force framework adopted at the 19th International Conference of Labour Statisticians (ICLS) that provided new guidelines for measuring and compiling statistics on work, employment and labour underutilization. 
+The Q3 2021 QLFS is the first of its kind. It follows the 2013 labour force framework adopted at the 19th International Conference of Labour Statisticians (ICLS) that provided new guidelines for measuring and compiling statistics on work, employment, and labour underutilization.
 
-The ZWE LFS is nationally representative, The sampling frame used for the LFCLS was the Zimbabwe Master Sample developed by the then Central Statistical Office after the 2002 Population Census. With the
-exception of Harare and Bulawayo, each of the other eight provinces was stratified into four strata according to land use: Communal Lands, Large Scale Commercial Farming Areas (LSCFA), Urban and Semi-Urban Areas, and Small Scale Commercial Farming Areas (SSCFA) and Resettlement Areas. Only one urban stratum was formed each in Harare and Bulawayo. This gave a total of 34 strata.
+The ZWE LFS is nationally representative. The sampling frame used for the LFCLS was the Zimbabwe Master Sample developed by the then Central Statistical Office after the 2002 Population Census. Except for Harare and Bulawayo, each of the other eight provinces was stratified into four strata according to land use: Communal Lands, Large Scale Commercial Farming Areas (LSCFA), Urban and Semi-Urban Areas, and Small-Scale Commercial Farming Areas (SSCFA) and Resettlement Areas. Only one urban stratum was formed each in Harare and Bulawayo, giving 34 strata in total.
 
-| Year	| # of Households*	| # of Individuals|
-| :-------	| :--------		| :--------	|
-| 2021 (Q3)	| N/A	| 46,085 |
-| 2021 (Q4)	| N/A	| 44,163 |
-| 2022 (Q1)	| N/A	| 44,442 |
-| 2022 (Q2)	| N/A	| 43,362|
-| 2022 (Q3)	| N/A	| 42,074 |
+| Year   | # of Households*         | # of Individuals|
+| :------- | :--------                             | :--------             |
+| 2021 (Q3)       | N/A    | 46,085 |
+| 2021 (Q4)       | N/A    | 44,163 |
+| 2022 (Q1)       | N/A    | 44,442 |
+| 2022 (Q2)       | N/A    | 43,362|
+| 2022 (Q3)       | N/A    | 42,074 |
 
-*The household data is yet to be confirmed by the NSO. 
+*The household data is yet to be confirmed by the NSO.
 
 ## Where can the data be found?
-The microdata from the Quarterly LFS is available throught the Zimbabwe Statistics [Website](https://www.zimstat.co.zw/labour-force-publications/). A quarterly report is provided. 
+The microdata from the Quarterly LFS is available through the Zimbabwe Statistics [Website](https://www.zimstat.co.zw/labour-force-publications/). A quarterly report is available.
 
 ## What is the sampling procedure?
-The sampling producedure is a two stage sample design. The 1st stage was the selection of enumeration areas using the probability proportional to size criteria. The 2nd stage was the selection of households in the selected enumeration areas using random systematic sampling technique. A total of 500 enumeration areas and 12,500 households were selected for the survey. The survey had a national response rate of 96.1 percent.
+The sampling procedure is a two-stage sample design. The 1st stage was the selection of enumeration areas using the probability proportional to size criteria. The 2nd stage was the selection of households in the selected enumeration areas using a random systematic sampling technique. 500 enumeration areas in total and 12,500 households were selected for the survey. 
 
 ## What is the geographic significance level?
-The primary objectives are to provide information on the number of people classified according to their activity status, the size and characteristics of the economically active population, that is, the employed and the unemployed, the informal sector employment and informal employment, retrenchments, the number of working children , the detrimental effects of work on children, and the living conditions in general. Also, information by gender, and urban location is available.
+The primary objectives are to provide information on the number of people classified according to their activity status, the size, and characteristics of the economically active population, that is, the employed and the unemployed, the informal sector employment and informal employment, retrenchments, the number of working children, the detrimental effects of work on children, and the living conditions in general. Also, information by gender and urban location is available.
 
 ## Other Noteworthy Aspects
 
-- In 2021 Q3 and Q4 there are some misaligment between the raw data labels and the questionaire questions. In particular the user of the raw data should note that Q8, Q9 and Q10 questions and answer labels are different to the questionaire.
-- In 2021 Q3 and Q4 the values of status of employment differ largely between quarters for contributing family workers. The harmonized data has integrated this in final file.
+- In 2021 Q3 and Q4, some responses from participants were recorded in the data and the questionnaire questions are misaligned. In particular, the user of the raw data should note that Q8, Q9 and Q10 questions and answer labels are different to the questionnaire.
+- In 2021 Q3 and Q4 the values of employment status differ between quarters for the category of "contributing family workers". 
 
 <br></br>
 ![Quarter_3](utilities/q3_empstat.PNG)
