--- a/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction to ZWE QLFS.md
+++ b/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction to ZWE QLFS.md
@@ -16,15 +16,13 @@ The Q3 2021 QLFS is the first of its kind. It follows the 2013 labour force fram
 
 The ZWE LFS is nationally representative. The sampling frame used for the LFCLS was the Zimbabwe Master Sample developed by the then Central Statistical Office after the 2002 Population Census. Except for Harare and Bulawayo, each of the other eight provinces was stratified into four strata according to land use: Communal Lands, Large Scale Commercial Farming Areas (LSCFA), Urban and Semi-Urban Areas, and Small-Scale Commercial Farming Areas (SSCFA) and Resettlement Areas. Only one urban stratum was formed each in Harare and Bulawayo, giving 34 strata in total.
 
-| Year   | # of Households*         | # of Individuals|
+| Year   | # of Households        | # of Individuals|
 | :------- | :--------                             | :--------             |
 | 2021 (Q3)       | N/A    | 46,085 |
 | 2021 (Q4)       | N/A    | 44,163 |
 | 2022 (Q1)       | N/A    | 44,442 |
 | 2022 (Q2)       | N/A    | 43,362|
 | 2022 (Q3)       | N/A    | 42,074 |
-
-*The household data is yet to be confirmed by the NSO.
 
 ## Where can the data be found?
 The microdata from the Quarterly LFS is available through the Zimbabwe Statistics [Website](https://www.zimstat.co.zw/labour-force-publications/). A quarterly report is available.
@@ -39,6 +37,7 @@ The primary objectives are to provide information on the number of people classi
 
 - In 2021 Q3 and Q4, some responses from participants were recorded in the data and the questionnaire questions are misaligned. In particular, the user of the raw data should note that Q8, Q9 and Q10 questions and answer labels are different to the questionnaire.
 - In 2021 Q3 and Q4 the values of employment status differ between quarters for the category of "contributing family workers". 
+- HHID cannot be created for any quarter because the raw data does not contain identificators. The data is only identifiable randomly at the household level.
 
 <br></br>
 ![Quarter_3](utilities/q3_empstat.PNG)
