--- a/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction to ZWE QLFS.md
+++ b/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction to ZWE QLFS.md
@@ -37,7 +37,7 @@ The primary objectives are to provide information on the number of people classi
 
 - In 2021 Q3 and Q4, some responses from participants were recorded in the data and the questionnaire questions are misaligned. In particular, the user of the raw data should note that Q8, Q9 and Q10 questions and answer labels are different to the questionnaire.
 - In 2021 Q3 and Q4 the values of employment status differ between quarters for the category of "contributing family workers". 
-- HHID cannot be created for any quarter because the raw data does not contain identificators. The data is only identifiable randomly at the household level.
+- Household IDs (HHID) cannot be created for any quarter because the raw data does not contain identificators. The data is only identifiable randomly at the household level.
 
 <br></br>
 ![Quarter_3](utilities/q3_empstat.PNG)
