Update 1.Introduction to ZWE LFS.md

--- a/Support/B - Country Survey Details/ZWE/LFS/1.Introduction to ZWE LFS.md
+++ b/Support/B - Country Survey Details/ZWE/LFS/1.Introduction to ZWE LFS.md
@@ -31,3 +31,7 @@ The survey used a two-stage sample design with EAs as the first and households a
 
 ## What is the geographic significance level?
 The primary objectives are to provide information on the number of people classified according to their activity status, the size, and characteristics of the economically active population, that is, the employed and the unemployed, the informal sector employment and informal employment, retrenchments, the number of working children, the detrimental effects of work on children, and the living conditions in general. Also, information by gender and urban location is available.
+
+## Other Noteworthy aspects
+
+- Household IDs (HHID) cannot be created for any quarter because the raw data does not contain identificators. The data is only identifiable randomly at the household level.
