Update 1. Introduction to ZWE QLFS.md

--- a/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction to ZWE QLFS.md
+++ b/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction to ZWE QLFS.md
@@ -31,7 +31,7 @@ The microdata from the Quarterly LFS is available through the Zimbabwe Statistic
 The sampling procedure is a two-stage sample design. The 1st stage was the selection of enumeration areas using the probability proportional to size criteria. The 2nd stage was the selection of households in the selected enumeration areas using a random systematic sampling technique. 500 enumeration areas in total and 12,500 households were selected for the survey. 
 
 ## What is the geographic significance level?
-The primary objectives are to provide information on the number of people classified according to their activity status, the size, and characteristics of the economically active population, that is, the employed and the unemployed, the informal sector employment and informal employment, retrenchments, the number of working children, the detrimental effects of work on children, and the living conditions in general. Also, information by gender and urban location is available.
+The survey is significant at the province level for each quarter. At times it is disaggregated by gender but there is no information at the urban/rural level by province. A word of caution for the user of the final harmonized datasets is that the datasets are aggregated by year to keep consistency; however, since the NSO is yet to release the year datasets, it is not possible to confidently confirm that the yearly significance level is significant beyond the province level. 
 
 ## Other Noteworthy Aspects
 
