Update 1. Introduction to ZWE QLFS.md

--- a/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction to ZWE QLFS.md
+++ b/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction to ZWE QLFS.md
@@ -35,9 +35,12 @@ The survey is significant at the province level for each quarter. At times it is
 
 ## Other Noteworthy Aspects
 
-- In 2021 Q3 and Q4, some responses from participants were recorded in the data and the questionnaire questions are misaligned. In particular, the user of the raw data should note that Q8, Q9 and Q10 questions and answer labels are different to the questionnaire.
-- In 2021 Q3 and Q4 the values of employment status differ between quarters for the category of "contributing family workers". 
-- Household IDs (HHID) cannot be created for any quarter because the raw data does not contain identificators. The data is only identifiable randomly at the household level.
+### Misalignment of the questionnaire and raw data responses
+- In 2021 Q3 and Q4, response labels for questions 8, 9 and 10 in the labour section differ from questionnaire labels. 
+
+### Employment Status
+- In 2021 Q3 and Q4, the values of employment status differ between quarters for the category of "contributing family workers". 
+- The images below show that the numbers of the category contributing family workers for 2011 and 2014 are significantly different. The user should consider this while analysing the data.
 
 <br></br>
 ![Quarter_3](utilities/q3_empstat.PNG)
@@ -46,6 +49,11 @@ The survey is significant at the province level for each quarter. At times it is
 <br></br>
 ![Quarter_4](utilities/Q4_empstat.PNG)
 <br></br>
+
+### No Household IDs
+- Household IDs (HHID) cannot be created for any quarter because the raw data does not contain identificators. The data is only identifiable randomly at the household level.
+
+
 
 
 
