--- a/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction to ZWE QLFS.md
+++ b/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction to ZWE QLFS.md
@@ -36,7 +36,14 @@ The survey is significant at the province level for each quarter. At times it is
 ## Other Noteworthy Aspects
 
 ### Misalignment of the questionnaire and raw data responses
-- In 2021 Q3 and Q4, response labels for questions 8, 9 and 10 in the labour section differ from questionnaire labels. 
+- In 2021 Q3 and Q4, response labels for questions 7, 8, 9 and 10 in the main job section differ from questionnaire labels.
+<br></br>
+![Quarter_3](utilities/q3_empstat.PNG)
+<br></br>
+
+<br></br>
+![Quarter_4](utilities/Q4_empstat.PNG)
+<br></br>
 
 ### Employment Status
 - In 2021 Q3 and Q4, the values of employment status differ between quarters for the category of "contributing family workers". 
