--- a/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction to ZWE QLFS.md
+++ b/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction to ZWE QLFS.md
@@ -42,7 +42,7 @@ The survey is significant at the province level for each quarter. At times it is
 <br></br>
 
 <br></br>
-![rawdata](utilities/image001.PNG)
+![rawdata](utilities/image001.png)
 <br></br>
 
 ### Employment Status
