Update 1. Introduction to ZWE QLFS.md

--- a/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction to ZWE QLFS.md
+++ b/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction to ZWE QLFS.md
@@ -36,7 +36,7 @@ The survey is significant at the province level for each quarter. At times it is
 ## Other Noteworthy Aspects
 
 ### Misalignment of the questionnaire and raw data responses
-- In 2021 Q3 and Q4, response labels for questions 7, 8, 9 and 10 in the main job section differ from questionnaire labels.
+- In 2021 Q3 and Q4, response labels for questions 7, 8, 9 and 10 in the main job section differ from questionnaire labels. The images below show the differences between the questionnaire and the raw data labels.
 <br></br>
 ![questionnaire](utilities/image1.PNG)
 <br></br>
