Update 1. Introduction to ZWE QLFS.md

--- a/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction to ZWE QLFS.md
+++ b/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction to ZWE QLFS.md
@@ -63,7 +63,9 @@ The survey is significant at the province level for each quarter. At times it is
 ### Management of Quarterly Data
 The Quarterly data, as described above, were grouped by year to facilitate the analysis of the user. However, the user should note that though the aggregated data is representative at the province level, the sample size is bigger after appending. Also, the user should note that the lack of household ID prevented us from merging by ID, as such, all the observations in the appended file are independent and not identifiable beyond the random ID assigned at the harmonization stage.
 
+### Change in ICLS definition
 
+See the following [page]() for details about ICLS definition changes that affect industry categories. The change applies from 2019 onwards.
 
 
 
