Update 1.Introduction to ZWE LFS.md

--- a/Support/B - Country Survey Details/ZWE/LFS/1.Introduction to ZWE LFS.md
+++ b/Support/B - Country Survey Details/ZWE/LFS/1.Introduction to ZWE LFS.md
@@ -36,7 +36,7 @@ The survey is significant at the province level for the years 2011 to 2019. At t
 
 ### Change in ICLS definition
 
-See the following [page]() for details about ICLS definition changes that affect industry categories. The change applies from 2019 onwards.
+See the following [page](ICLS_change.md) for details about ICLS definition changes that affect industry categories. The change applies from 2019 onwards.
 
 ### No Household IDs 
 
@@ -44,4 +44,4 @@ Household IDs (HHID) cannot be created for any quarter because the raw data does
 
 ### Highest level of education
 
-Please see this [page]() for a complete explanation on the education levels in ZWE.
+Please see this [page](Education.md) for a complete explanation on the education levels in ZWE.
