Update 1. Introduction to ZWE QLFS.md

--- a/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction to ZWE QLFS.md
+++ b/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction to ZWE QLFS.md
@@ -65,11 +65,11 @@ The Quarterly data, as described above, were grouped by year to facilitate the a
 
 ### Change in ICLS definition
 
-See the following [page](LFS/ICLS_change.md) for details about ICLS definition changes that affect industry categories. The change applies from 2019 onwards.
+See the following [page](./ICLS_change.md) for details about ICLS definition changes that affect industry categories. The change applies from 2019 onwards.
 
 ### Highest level of education
 
-Please see this [page](LFS/Education.md) for a complete explanation on the education levels in ZWE.
+Please see this [page](./Education.md) for a complete explanation on the education levels in ZWE.
 
 
 
