Update 1. Introduction to ZWE QLFS.md

--- a/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction to ZWE QLFS.md
+++ b/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction to ZWE QLFS.md
@@ -69,7 +69,7 @@ See the following [page](./ICLS_change.md) for details about ICLS definition cha
 
 ### Highest level of education
 
-Please see this [page](./Education.md) for a complete explanation on the education levels in ZWE.
+Please see this [page](https://github.com/worldbank/gld/blob/b1515b74f68d2f0cb11550682d453027ee31070c/Support/B%20-%20Country%20Survey%20Details/ZWE/LFS/Education.md) for a complete explanation on the education levels in ZWE.
 
 
 
