Update 1. Introduction to ZWE QLFS.md

--- a/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction to ZWE QLFS.md
+++ b/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction to ZWE QLFS.md
@@ -65,7 +65,7 @@ The Quarterly data, as described above, were grouped by year to facilitate the a
 
 ### Change in ICLS definition
 
-See the following [page]() for details about ICLS definition changes that affect industry categories. The change applies from 2019 onwards.
+See the following [page](https://github.com/worldbank/gld/blob/e5f4e8da632a43c36175edda905db54a66cd075f/Support/B%20-%20Country%20Survey%20Details/ZWE/LFS/ICLS_change.md) for details about ICLS definition changes that affect industry categories. The change applies from 2019 onwards.
 
 ### Highest level of education
 
