Update 1.Introduction to ZWE LFS.md

--- a/Support/B - Country Survey Details/ZWE/LFS/1.Introduction to ZWE LFS.md
+++ b/Support/B - Country Survey Details/ZWE/LFS/1.Introduction to ZWE LFS.md
@@ -45,3 +45,10 @@ Household IDs (HHID) cannot be created for any quarter because the raw data does
 ### Highest level of education
 
 Please see this [page](Education.md) for a complete explanation on the education levels in ZWE.
+
+### Missing Industry and Ocupation variables in 2019
+
+The GLD harmonized data does not contain ISIC and ISCO information for 2019. The team set to missing any other GLD variables built from ISIC and ISCO classifications. However, the user can access the industry and occupation original data from the GLD harmonized dataset.
+
+
+
