--- a/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction to ZWE QLFS.md
+++ b/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction to ZWE QLFS.md
@@ -72,6 +72,9 @@ See the following [page](https://github.com/worldbank/gld/blob/e5f4e8da632a43c36
 
 Please see this [page](https://github.com/worldbank/gld/blob/b1515b74f68d2f0cb11550682d453027ee31070c/Support/B%20-%20Country%20Survey%20Details/ZWE/LFS/Education.md) for a complete explanation on the education levels in ZWE.
 
+### Migration reference period
+
+The time interval between the 2011 , 2014 and 2019 LFS surveys was 5 years, as such the information on migration reference period was labeled as 5 years interval for each survey respectively. Starting 2021, the LFS survey has been conducted quarterly starting from Q3, the result is that the time interval between surveys is now reducted to 1 quarter of a year. The GLD team took this in consideration for the variable from the migration section that codes the reference period. In 2021, the data  was collected after 2 years as such the corresponding migration reference period is 2 years, for Q4 of 2021 , however, the reference period is the previous quarter. In the year 2022, all the information on migration follows the precedent quarter as such it has been labeled as 0.25 (1 quarter of a year). 
 
 
 
