--- a/Support/B - Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
+++ b/Support/B - Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
@@ -51,6 +51,12 @@ The main difference, however, lies in the stratification at the second stage. Wh
 
 The report on the first PLFS from 2017 compares the sampling methodologies for the last EUS round to the first PLFS one. The particular details are on [pages 6 to 10 of the report](utilities/AR_PLFS_2017.pdf).
 
+### Calculating population totals
+
+Screenshot from [page 125 of the Annual Report PDF](utilities/Annual_Report_PLFS_2019_20.pdf)
+
+![Screenshot of pop total from report](utilities/earnings_questions.PNG)
+
 ### Coding of industry and occupation codes
 
 The PLFS data is coded using NIC-2008 codes for industry and NCO-2004 codes for occupation. NIC-2008 codes are five-digit codes whose first four are equivalent with ISIC-4 and the last one is used, wherever necessary to adapt to the Indian context. Hence no correspondence tables are necessary to translate the information to ISIC-4.
