Update 1. Introduction to PLFS.md

--- a/Support/B - Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
+++ b/Support/B - Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
@@ -55,7 +55,7 @@ The report on the first PLFS from 2017 compares the sampling methodologies for t
 
 Screenshot from [page 125 of the Annual Report PDF](utilities/Annual_Report_PLFS_2019_20.pdf)
 
-![Screenshot of pop total from report](utilities/earnings_questions.PNG)
+![Screenshot of pop total from report](utilities/disclaimer_pop_totals.png)
 
 ### Coding of industry and occupation codes
 
