Update text to explain pop totals

--- a/Support/B - Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
+++ b/Support/B - Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
@@ -53,9 +53,11 @@ The report on the first PLFS from 2017 compares the sampling methodologies for t
 
 ### Calculating population totals
 
-Screenshot from [page 125 of the Annual Report PDF](utilities/Annual_Report_PLFS_2019_20.pdf)
+The population totals from the PLFS falls short of general estimates. This is acknowledged by the data producer. The screenshot below is [from page 125 of the PDF of the Annual Report for 2019](utilities/Annual_Report_PLFS_2019_20.pdf), showing a total population of about 1.1 billion people – UN estimates are at about 1.4 billion.
 
 ![Screenshot of pop total from report](utilities/disclaimer_pop_totals.png)
+
+The GLD maintains the survey original weights. Users are advised to adjust the weights to calculate absolute estimates (not needed for ratios) in line with the data producer’s footnote (see the red underlined footnote in the screenshot above).
 
 ### Coding of industry and occupation codes
 
