Update and rename 1.Introduction to ZWE LFS.md to 1. Introduction to ZWE LFS.md
Expanded text

--- a/Support/B - Country Survey Details/ZWE/LFS/1. Introduction to ZWE LFS.md
+++ b/Support/B - Country Survey Details/ZWE/LFS/1. Introduction to ZWE LFS.md
@@ -20,31 +20,31 @@ The ZWE LFS is nationally representative. The sampling frame used for the LFS wa
 | 2014	| 9759	| 40,527 |
 | 2019	| N/A*	| 39,126 |
 
-*The household data for 2019 is yet to be confirmed by the NSO.
+*The data used by GLD does not allows us currently to establish a household ID and thus the number of HHs is not given.
 
 ## Where can the data be found?
 
-The microdata from 2011, 2014 and 2019 LFS is available through the ZWE statistics [bureau catalogue](https://nada.zimstat.co.zw/index.php/catalog). Documentation is available in the data catalogue. 
+The microdata from 2014 and 2019 LFS is available through the ZWE statistics [bureau catalogue](https://nada.zimstat.co.zw/index.php/catalog) along with the documentation. The data for 2011 was shared internally with the GLD and can only be distributed within the World Bank. 
 
 ## What is the sampling procedure?
 The survey used a two-stage sample design with EAs as the first and households as the second-stage sampling units. In total 400 EAs were selected with probability proportional to size (PPS), the measure of size being the number of households enumerated in the 2002 Population Census. The selection of the EAs was a systematic one-stage operation, carried out independently for each of the 34 strata.
 
 ## What is the geographic significance level?
-The survey is significant at the province level for the years 2011 to 2019. At times it is dissaggregated by gender but there is no information at the urban/rural level by province.
+The survey is significant at the province level for the years 2011 to 2019. Information in the report is at times disaggregated by province and sex, but never by province and urban/rural area.
 
 ## Other Noteworthy aspects
 
 ### Change in ICLS definition
 
-See the following [page](ICLS_change.md) for details about ICLS definition changes that affect industry categories. The change applies from 2019 onwards.
+The concept of what constitutes employment has been affected by the definition changes implemented by the International Labour Organisation ([see more here](https://ilostat.ilo.org/resources/concepts-and-definitions/description-work-statistics-icls19/)). The change in the definition, which implies changes in the questionnaire was first introduced in Zimbabwe during the 2019 LFS. The following [page](ICLS_change.md) describes this in more detail.
 
-### No Household IDs 
+### No Household IDs in 2019
 
-Household IDs (HHID) cannot be created for any quarter because the raw data does not contain identificators. The data is only identifiable randomly at the household level.
+The data received for 2019 does not permit us to link the Household level file (containing the HH IDs) to the individual file. Hence no HH ID is created for 2019.
 
 ### Highest level of education
 
-Please see this [page](Education.md) for a complete explanation on the education levels in ZWE.
+Please see this [page](Education.md) for a complete explanation on the education levels in ZWE and how these were coded to the GLD standard variables.
 
 ### Missing Industry and Ocupation variables in 2019
 
