Update 1. Introduction to ZWE LFS.md

--- a/Support/B - Country Survey Details/ZWE/LFS/1. Introduction to ZWE LFS.md
+++ b/Support/B - Country Survey Details/ZWE/LFS/1. Introduction to ZWE LFS.md
@@ -46,9 +46,15 @@ The data received for 2019 does not permit us to link the Household level file (
 
 Please see this [page](Education.md) for a complete explanation on the education levels in ZWE and how these were coded to the GLD standard variables.
 
-### Missing Industry and Ocupation variables in 2019
+### Missing Industry and Occupation variables in 2019
 
-The GLD harmonized data does not contain ISIC and ISCO information for 2019. The team set to missing any other GLD variables built from ISIC and ISCO classifications. However, the user can access the industry and occupation original data from the GLD harmonized dataset.
+In the year 2019, the public data available to the GMD team has only ISIC and ISCO information for a subsection fo those employed. The screenshot below shows the comparison between the 2019 LFS and Q3 of 2021 which are both based on the same questionnaire. On the right-hand side we see the expected (nearly) diagonal matrix. Those who are employed have ISIC information, those who are not don't. The same applies to ISCO (not shown). 
+
+In the case of 2019 (left-hand side) the information is not as expected. There are (oddly enough) exactly as employed people without ISIC information as there are people without employment who have an ISIC code recorded. The original information as recorded in the survey is accessible to users via the `industry_orig` and `occup_orig` variables. However, since the information may be skewed if we use the seemingly incorrectly coded variables, no further variables for industry or occupation are harmonised for 2019.
 
 
+<br></br>
+![questionnaire](utilities/isic_diff_zwe.PNG)
+<br></br>
 
+We are hoping to receive an updated version that will allow us to code information. If you have updated data, please let us know by reaching out to gld@worldbank.org.
