Add point about change in master sample 2014/2015

--- a/Support/B - Country Survey Details/ZAF/QLFS/1. Introduction to QLFS.md
+++ b/Support/B - Country Survey Details/ZAF/QLFS/1. Introduction to QLFS.md
@@ -54,6 +54,10 @@ Two things to be noted regarding geographic significance level:
 
 ## Other noteworthy aspects
 
+### Change in the master sampling frame
+
+The dwellings selected for inclusion in the QLFS from 2008 to 2014 are based on the 2001 census master sampling frame, while from 2015 on, the sampling is based on the 2011 census master sampling frame. This has no impact on the estimation but does affect the rotating sample. The change in sampling frame changes the IDs so the rotating panel can be tracked from 2008 to 2014 and anew from 205 onwards. We cannot identify individuals who are in both Q4 of 2014 and Q1 of 2015.
+
 ### Difference from reported population
 
 Sample sizes and expanded population (that is the total population estimated using the weights) are compared to the reported data in the publication "*Labour Market Dynamics in South Africa*" by the Statistics South Africa for all years. Reports can be found on DataFirst under "Reports" in the "DOCUMENTATION" section (i.e. 2019 quarter 1 can be found [here](https://www.datafirst.uct.ac.za/dataportal/index.php/catalog/764)). The expanded population estimated using raw data match exactly the numbers in reports of year 2010 to 2019 after rounding.
