--- a/Support/B - Country Survey Details/IND/EUS/1. Introduction to EUS.md
+++ b/Support/B - Country Survey Details/IND/EUS/1. Introduction to EUS.md
@@ -103,3 +103,7 @@ The details of these definitions are [covered separately in another document](De
 ### Definitions of employment status
 
 The harmonization used for GLD only has one category for paid employees. However, the EUS has different codes for so called "regular" and "casual" employees, denoting a tighter and a more lose relationship to the employer in either case. Commonly casual employees will earn less and be in a less formal setting. Differentiating between these types of employment may be useful to researchers. The GLD team has created codes to run on the raw data that create an alternative `empstat` called `empstat_alt`. The datafile created only has variables `empstat_alt` and `pid`, where the latter can be used to merge it with the regular harmonization. The [codes can be found here](utilities/Code%20for%20creating%20alternative%20empstat).
+
+### Changes to variable `school`
+
+The variable `school` codes whether the respondent is currently attending schooling or not. This question is asked to all ages up to 2005. The variable is missing in 2007 since it is not asked. From 2009 on (for the 2009 and 2011 EUS and also thereafter in the PLFS) this question is only asked to respondents aged 29 or younger. Thus a comparison across all years not taking age into account would be skewed.
